--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,13 @@
   },
   "require-dev": {
     "phpunit/phpunit": "10.5.19",
-    "phpstan/phpstan": "^1.11"
+    "phpstan/phpstan": "^1.11",
+    "infection/infection": "^0.29.6"
+  },
+  "config": {
+    "allow-plugins": {
+      "infection/extension-installer": true
+    }
   },
   "scripts": {
     "phpstan": "vendor/bin/phpstan analyze -l9 src tests",
