--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
   "require": {
     "php": ">=8.1",
     "php-amqplib/php-amqplib": "^3.2",
-    "pivovartsev/is-config-reader": "^1.0"
+    "pivovartsev/is-config-reader": "^1.0",
+    "ext-mysqli": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "10.5.19",
