--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "php": ">=8.1",
     "php-amqplib/php-amqplib": "^3.2",
     "pivovartsev/is-config-reader": "^1.0",
-    "ext-mysqli": "*"
+    "ext-mysqli": "*",
+    "monolog/monolog": "3.x-dev"
   },
   "require-dev": {
     "phpunit/phpunit": "10.5.19",
